
         • ‘plot_RLum’ was not passing the argument ‘sub’, as it was
           fetched by the partial argument matching; fixed.

  Bugfixes and changes:

         • ‘analyse_SAR.CWOSL()’

             • Fix wrongly set threshold value for recuperation rate
               (#26).

         • ‘calc_AliquotSize()’

             • Console output can now be suppressed via 'verbose =
               TRUE'.

         • ‘calc_FadingCorr()’

             • Fixed a bug where the function would crash when
               providing an ‘RLum.Results’ object for ‘g_value’.

         • ‘calc_FiniteMixture()’

             • Fixed a bug where certain arguments where not passed to
               `plot_RLum.Results` so that the plot was not as
               customisable as intended.  Thanks to Daniele Questiaux
               for reporting the bug.

         • ‘plot_DetPlot()’

             • Correct negative y-axis, the minimum is now the real
               minimum.

         • ‘plot_GrowthCurve()’

             • Reduce number of confusing warning,

             • add new argument ‘mode’ to select the calculation mode
               of the function.  This allows in particular to only fit
               data without calculating a De or calculating a De
               assuming an additive dose reponse curve.

         • ‘plot_RadialPlot()’

             • Sometimes the function crashed with an out of bonds
               error if more than one data set was provided; fixed,

             • argument ‘negatives’ caused an error if not set to
               ‘'remove'’ and fix some errors around this option,

             • argument ‘negatives’ renamed to ‘negatives.rm’ and
               changed to type ‘logical’.

         • ‘plot_RLum.Data.Spectrum()’

             • The interactive plot option was broken with the last
               update of the package 'plotly'; fixed.

         • ‘read_BIN2R()’

             • If BIN-files are automatically imported the function