@@ -6,7 +6,7 @@
 \usage{
 calc_CosmicDoseRate(depth, density, latitude, longitude, altitude,
   corr.fieldChanges = FALSE, est.age = NA, half.depth = FALSE,
-  error = 10)
+  error = 10, ...)
 }
 \arguments{
 \item{depth}{\code{\link{numeric}} (\bold{required}): depth of overburden
@@ -40,6 +40,8 @@ rate can safely be assumed.}
 
 \item{error}{\code{\link{numeric}} (with default): general error
 (percentage) to be implemented on corrected cosmic dose rate estimate}
+
+\item{...}{further arguments (\code{verbose} to disable/enable console output).}
 }
 \value{
 Returns a terminal output. In addition an
@@ -159,7 +161,7 @@ for near-surface samples as there is no equation known to the author of this
 function at the time of writing.
 }
 \section{Function version}{
- 0.5.2 (2015-11-29 17:27:48)
+ 0.5.2
 }
 \examples{
 
@@ -207,12 +209,7 @@ results<- calc_CosmicDoseRate(depth = c(0.1, 0.5 , 2.1, 2.7, 4.2, 6.3),
 }
 \author{
 Christoph Burow, University of Cologne (Germany)
-\cr R Luminescence Package Team} 
-
-\section{How to cite}{
-Burow, C. (2016). calc_CosmicDoseRate(): Calculate the cosmic dose rate. Function version 0.5.2. In: Kreutzer, S., Dietze, M., Burow, C., Fuchs, M.C., Schmidt, C., Fischer, M., Friedrich, J. (2016). Luminescence: Comprehensive Luminescence Dating Data Analysis. R package version 0.7.0. https://CRAN.R-project.org/package=Luminescence
 }
-
 \references{
 Allkofer, O.C., Carstensen, K., Dau, W.D., Jokisch, H., 1975.
 Letter to the editor. The absolute cosmic ray flux at sea level. Journal of
